--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,7 +28,7 @@
                 <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="{{ url_for('main.home') }}">Home</a>
 <!--                <a class="nav-link fw-bold py-1 px-0" href="{{ url_for('user.register') }}">Register</a>-->
 <!--                <a class="nav-link fw-bold py-1 px-0" href="{{ url_for('auth.login') }}">Login</a>-->
-                <a class="nav-link fw-bold py-1 px-0" href="#">Results</a>
+                <a class="nav-link fw-bold py-1 px-0" href="{{ url_for('result.results') }}">Results</a>
                 {% if current_user.is_authenticated %}
                 <a class="nav-link fw-bold py-1 px-0" href="{{ url_for('auth.logout' )}}">Log Out</a>
                 {% endif %}
