--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -43,11 +43,15 @@
                     {{ form.password(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-
+            <div class="form-check">
+                    {{ form.remember(class="form-check-input") }}
+                    {{ form.remember.label(class="form-check-label") }}
+                </div>
+        </fieldset>
+          <br>
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
-        </fieldset>
 
 <!--      {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}-->
   </form>
