added some tests(pytest). cleaned unused libraries, updated lots of templates and routes

--- a/app/templates/candidate.html
+++ b/app/templates/candidate.html
@@ -2,6 +2,7 @@
     <!-- Custom styles for this template -->
 <!--    <link href="{{ url_for('static', filename='css/register.css') }}" rel="stylesheet">-->
 
+{% block title %}Add Candidate{% endblock %}
 
 {% block style %}
     {{ super() }}
