--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,6 +1,7 @@
 {% extends "index.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
+{% block title %}Register{% endblock %}
 
 {% block style %}
     {{ super() }}
